<resources>
    <string name="app_name">FDPApp1</string>
    <string name="ok">OK</string>
    <string name="soma">+</string>
    <string name="subtracao">-</string>
    <string name="divisao">/</string>
    <string name="multiplicacao">*</string>
    <string name="resultado">Resultado</string>
    <string name="fechar">Fechar</string>
    <string name="calculadora">Calculadora</string>
    <string name="conversor">Conversor</string>
    <string name="menu">MENU</string>
    <string name="valor_em_metros">Valor em metros:</string>
    <string name="valor_convertido">Valor convertido:</string>
    <string name="km">Km</string>
    <string name="cm">Cm</string>
    <string name="milha">Milha</string>
    <string name="pol">Pol</string>
    <string name="nome">Nome :</string>
    <string name="salvar">Salvar</string>
    <string name="agenda">Agenda</string>
    <string name="telefone">Telefone :</string>
    <string name="email">E-mail :</string>
    <string name="id">ID</string>
    <string name="novo">Novo</string>
</resources>
